# rustsat

./: .env  .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  _typos.toml  build.rs  cliff.toml  clippy.toml  deny.toml  diff  failing.pbp  flake.nix  justfile  release-plz.toml  renovate.json  result  rust-toolchain.toml  shell.nix  test.elab  test2.pbp
batsat/: CHANGELOG.md  Cargo.toml  README.md
batsat/src/: lib.rs
batsat/tests/: incremental.rs  small.rs
cadical/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-all.sh  build.rs  test-all.sh
cadical/cpp-extension/: cadical_extension.hpp  ccadical_extension.cpp  ccadical_extension.h  cipasirup.cpp  cipasirup.h  ctracer.cpp  ctracer.h  dummy-ccadical.h  solver_extension.cpp
cadical/cppsrc/: .gitignore  Dockerfile  NEWS.md  cadical_extension.hpp  ccadical_extension.cpp  ccadical_extension.h  configure  ctracer.cpp  ctracer.h  makefile.in  solver_extension.cpp
cadical/cppsrc/scripts/: run-mobical-in-parallel.sh
cadical/cppsrc/src/: cadical.hpp  ccadical.cpp  ccadical.h  clause.hpp  congruence.cpp  congruence.hpp  contract.hpp  deduplicate.cpp  flip.cpp  internal.cpp  solver.cpp
cadical/examples/: cadical-cli.rs
cadical/patches/: v150.patch  v154.patch  v156.patch  v160.patch  v170.patch  v171.patch  v180.patch  v190.patch  v192.patch  v200.patch  v210.patch  v211.patch  v213.patch  v220.patch  v221.patch
cadical/src/: ffi.rs  ipasirup.rs  lib.rs  prooftracer.rs  tracer.rs
cadical/src/ffi/: ipasirup.rs  prooftracer.rs
cadical/tests/: flipping.rs  incremental.rs  internal_stats.rs  ipasirup.rs  learning.rs  phasing.rs  small.rs
capi/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml  rustsat.h
capi/examples/: Makefile  capi-ipasir.cpp  capi.cpp
capi/src/: encodings.rs  lib.rs
capi/src/encodings/: adder.rs  am1.rs  bimander.rs  bitwise.rs  card.rs  commander.rs  commander.rs~  dpw.rs  gte.rs  ladder.rs  mod.rs  pairwise.rs  pb.rs  totalizer.rs
capi/tests/: bimander-basic.c  bimander-drop.c  bin_adder-basic.c  bin_adder-drop.c  bitwise-basic.c  bitwise-drop.c  c-tests.rs  commander-basic.c  commander-drop.c  dpw-basic.c  dpw-coarse-convergence.c  dpw-drop.c  dpw-reserve.c  gte-basic.c  gte-drop.c  gte-reserve.c  ladder-basic.c  ladder-drop.c  pairwise-basic.c  pairwise-drop.c  tot-basic.c  tot-drop.c  tot-reserve.c  twoproduct-basic.c  twoproduct-drop.c
codegen/: Cargo.toml  README.md  default.nix
codegen/src/: main.rs
codegen/templates/: capi-am1-test-basic.c.j2  capi-am1-test-drop.c.j2  capi-am1.rs.j2  capi-assumps.j2  capi-bound-panic.j2  capi-card-test-basic.c.j2  capi-card-test-reserve.c.j2  capi-card.rs.j2  capi-collector-n-vars.j2  capi-drop.j2  capi-ipasir-lit.j2  capi-pb-test-basic.c.j2  capi-pb-test-drop.c.j2  capi-pb-test-reserve.c.j2  capi-pb.rs.j2  capi-reserve.j2  capi-safety.j2  capi-test-drop.j2  codegen-header.j2  fuzz-am1.rs.j2  fuzz-card.rs.j2  fuzz-cargo.toml.j2
core/: Dimacs.h  (+1 more)
cryptominisat/: Cargo.toml  README.md  build.rs
cryptominisat/src/: lib.rs
cryptominisat/tests/: incremental.rs  small.rs
glucose/: CHANGELOG.md  Cargo.toml  README.md  build.rs
glucose/cppsrc/: Changelog  LICENCE  cglucose4.cc  cglucose4.h
glucose/cppsrc/core/: BoundedQueue.h  Constants.h  Solver.cc  Solver.h  SolverTypes.h  lcm.cc
glucose/cppsrc/mtl/: Alloc.h  Clone.h  Map.h  Vec.h  VecThreads.h
glucose/cppsrc/parallel/: ClausesBuffer.h  Main.cc  MultiSolvers.cc  MultiSolvers.h  ParallelSolver.cc  ParallelSolver.h  SharedCompanion.cc  SolverConfiguration.cc  SolverConfiguration.h
glucose/cppsrc/simp/: Main.cc  SimpSolver.cc  SimpSolver.h  glucose
glucose/cppsrc/utils/: Options.cc  Options.h  ParseUtils.h  StreamBuffer.h  System.cc
glucose/src/: core.rs  lib.rs  simp.rs
glucose/tests/: incremental.rs  internal_stats.rs  phasing.rs  small.rs
ipasir/: CHANGELOG.md  Cargo.toml  README.md
ipasir/src/: ffi.rs  lib.rs
kissat/: CHANGELOG.md  Cargo.toml  README.md  build-all.sh  build.rs  test-all.sh
kissat/csrc/: .gitignore  dummy-error.h  dummy-kissat.h
kissat/examples/: kissat-cli.rs
kissat/src/: ffi.rs  lib.rs
kissat/tests/: small.rs
minisat/: CHANGELOG.md  Cargo.toml  README.md  build.rs
minisat/core/: Solver.cc
minisat/cppsrc/: CMakeLists.txt
minisat/cppsrc/minisat/: cminisat.cc  cminisat.h
minisat/examples/: minisat-cli.rs
minisat/simp/: SimpSolver.cc
minisat/src/: core.rs  lib.rs  simp.rs
minisat/tests/: incremental.rs  internal_stats.rs  phasing.rs  small.rs
pigeons/: CHANGELOG.md  Cargo.toml  README.md
pigeons/src/: keywords.rs  lib.rs  ops.rs  types.rs
pigeons/tests/: veripb_examples.rs
pyapi/: CHANGELOG.md  Cargo.toml  README.md  build.rs  default.nix  doc.nix  pyproject.toml  stubtest-allowlist.txt
pyapi/examples/: pyapi-dpw.py
pyapi/python/rustsat/: __init__.pyi
pyapi/rustsat/: __init__.py  __init__.pyi
pyapi/rustsat/encodings/: __init__.pyi
pyapi/src/: encodings.rs  instances.rs  lib.rs  types.rs
pyapi/src/encodings/: am1.rs  card.rs  mod.rs  pb.rs
rustsat/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  pyproject.toml  rustsat.h
rustsat/examples/: Makefile  print-lits.rs  profiling.rs  pyapi-dpw.py
rustsat/rustsat/: __init__.pyi
rustsat/rustsat/encodings/: __init__.py  __init__.pyi
rustsat/src/: bench.rs  capi.rs  encodings.rs  instances.rs  lib.rs  pyapi.rs  solvers.rs  types.rs  utils.rs
rustsat/src/encodings/: am1.rs  atomics.rs  card.rs  nodedb.rs  pb.rs
rustsat/src/instances/: fio.rs  multiopt.rs  opt.rs  sat.rs
rustsat/src/solvers/: cadical.rs  glucose4.rs  ipasir.rs  minisat.rs
rustsat/tests/: am1_encodings.rs  card_encodings.rs  compression.rs  constraints.rs  opb.rs  pb_encodings.rs
solvertests/: Cargo.toml
solvertests/src/: integration.rs  lib.rs  unit.rs
tools/: CHANGELOG.md  Cargo.toml  README.md  default.nix
tools/src/: lib.rs  parsing.rs  utils.rs
tools/tests/: am1_encodings.rs  card_encodings.rs  cnf.rs  compression.rs  constraints.rs  opb.rs  pb_encodings.rs
(+340 files in other folders)
