[workspace]
members = [
  "tools",
  "cadical",
  "kissat",
  "glucose",
  "minisat",
  "ipasir",
  "solvertests",
  "capi",
  "pyapi",
  "batsat",
  "pigeons",
]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.95"
atty = "0.2.14"
bindgen = "0.71.1"
bzip2 = "0.5.0"
cc = { version = "1.2.11", features = ["parallel"] }
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive", "cargo"] }
cmake = "0.1.53"
concolor-clap = "0.1.0"
cpu-time = "1.0.0"
flate2 = { version = "1.0.35", features = [
  "zlib-ng",
], default-features = false }
git2 = "0.20.0"
glob = "0.3.2"
itertools = "0.14.0"
nom = "7.1.3"
pigeons = { version = "0.1.0", path = "./pigeons" }
termcolor = "1.4.1"
thiserror = "2.0.11"
rand = "0.9.0"
rand_chacha = "0.9.0"
rustc-hash = "2.1.0"
rustsat = { version = "0.6.3", path = "./", default-features = false }
rustsat-cadical = { version = "0.4.3", path = "./cadical" }
rustsat-minisat = { version = "0.4.3", path = "./minisat" }
rustsat-solvertests = { path = "./solvertests" }
signal-hook = "0.3.17"
tempfile = "3.16.0"
visibility = "0.1.1"
xz2 = "0.1.7"

[package]
name = "rustsat"
version = "0.6.3"
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "This library aims to provide implementations of elements commonly used in the development on software in the area of satisfiability solving. The focus of the library is to provide as much ease of use without giving up on performance."
keywords = ["sat", "satisfiability", "encodings"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
rust-version = "1.70.0"
include = [
  "LICENSE",
  "CHANGELOG.md",
  "README.md",
  "/src/",
  "/examples/",
  "/docs/",
]

[dependencies]
anyhow.workspace = true
cpu-time.workspace = true
nom.workspace = true
thiserror.workspace = true
visibility.workspace = true
bzip2 = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
itertools.workspace = true
rand = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }
tempfile.workspace = true
xz2 = { workspace = true, optional = true }
pigeons = { workspace = true, optional = true }

[dev-dependencies]
rustsat-minisat = { path = "./minisat" }
rustsat-solvertests.workspace = true
rustsat-tools = { path = "./tools" }
tempfile.workspace = true

[features]
default = ["optimization", "fxhash", "proof-logging"]
internals = []
fxhash = ["dep:rustc-hash"]
optimization = []
multiopt = ["optimization"]
compression = ["dep:bzip2", "dep:flate2", "dep:xz2"]
rand = ["dep:rand"]
bench = []
ipasir-display = []
proof-logging = ["dep:pigeons"]
verbose-proofs = ["proof-logging"]
all = [
  "multiopt",
  "compression",
  "rand",
  "fxhash",
  "proof-logging",
  "verbose-proofs",
]

[package.metadata.docs.rs]
features = ["all", "internals"]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "profiling"

[[example]]
name = "print-lits"

[profile.profiling]
inherits = "release"
debug = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
