[package]
name = "rustsat-batsat"
version.workspace = true
edition.workspace = true
authors = ["Noah Bruns <nbruns@efs.at>"]
license.workspace = true
description = "Interface to the SAT solver BatSat for the RustSAT library. BatSat is fully implemented in Rust"
keywords = ["sat-solver", "rustsat", "batsat"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
include = ["CHANGELOG.md", "README.md", "/src/"]
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# keep-sorted start
anyhow.workspace = true
batsat = "0.6.0"           # when changing this version, do not forget to update signature
rustsat.workspace = true
thiserror.workspace = true
# keep-sorted end

[dev-dependencies]
rustsat-solvertests = { path = "../solvertests" }

[features]
_test = []
