[package]
name = "rustsat-cadical"
version.workspace = true
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "Interface to the SAT solver CaDiCaL for the RustSAT library."
keywords = ["sat-solver", "rustsat"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
include = [
  "build.rs",
  "CHANGELOG.md",
  "README.md",
  "/src/",
  "/patches/",
  "/examples/",
  "/cpp-extension/",
  "/cppsrc/src/",
  "/cppsrc/README.md",
  "/cppsrc/LICENSE",
  "/cppsrc/VERSION",
]
rust-version = "1.77.0" # When changing, update crate documentation, build script, and tools MSRV

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["quiet"]
debug = []
quiet = []
logging = []
tracing = []
pigeons = ["dep:pigeons", "rustsat/proof-logging"]
all = ["tracing"]
git = ["dep:git2"]
# keep-sorted start
v1-5-0 = ["git"]
v1-5-1 = ["git"]
v1-5-2 = ["git"]
v1-5-3 = ["git"]
v1-5-4 = ["git"]
v1-5-5 = ["git"]
v1-5-6 = ["git"]
v1-6-0 = ["git"]
v1-7-0 = ["git"]
v1-7-1 = ["git"]
v1-7-2 = ["git"]
v1-7-3 = ["git"]
v1-7-4 = ["git"]
v1-7-5 = ["git"]
v1-8-0 = ["git"]
v1-9-0 = ["git"]
v1-9-1 = ["git"]
v1-9-2 = ["git"]
v1-9-3 = ["git"]
v1-9-4 = ["git"]
v1-9-5 = ["git"]
v2-0-0 = ["git"]
v2-1-0 = ["git"]
v2-1-1 = ["git"]
v2-1-2 = ["git"]
v2-1-3 = []
# keep-sorted end

[dependencies]
# keep-sorted start
anyhow.workspace = true
pigeons = { workspace = true, optional = true }
rustsat.workspace = true
thiserror.workspace = true
# keep-sorted end

[build-dependencies]
# keep-sorted start
bindgen.workspace = true
cc.workspace = true
chrono.workspace = true
git2 = { workspace = true, optional = true }
glob.workspace = true
# keep-sorted end

[dev-dependencies]
# keep-sorted start
clap.workspace = true
rustsat-solvertests.workspace = true
signal-hook.workspace = true
# keep-sorted end

[package.metadata.docs.rs]
features = ["all"]
