[package]
name = "rustsat-cadical"
version.workspace = true
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "Interface to the SAT solver CaDiCaL for the RustSAT library."
keywords = ["sat-solver", "rustsat"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
include = [
  "build.rs",
  "CHANGELOG.md",
  "README.md",
  "/src/",
  "/patches/",
  "/examples/",
  "/cpp-extension/",
  "/cppsrc/src/",
  "/cppsrc/README.md",
  "/cppsrc/LICENSE",
  "/cppsrc/VERSION",
]
rust-version.workspace = true # When changing, update crate documentation, build script, and tools MSRV

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["quiet"]
debug = []
quiet = []
logging = []
tracing = []
pigeons = ["dep:pigeons", "rustsat/proof-logging"]
git = ["dep:git2"]
_test = ["tracing", "debug"]
_docs = ["pigeons", "tracing"]
# keep-sorted start
v1-5 = ["git"]
v1-6 = ["git"]
v1-7 = ["git"]
v1-8 = ["git"]
v1-9 = ["git"]
v2-0 = ["git"]
v2-1 = ["git"]
v2-2 = []
# keep-sorted end

[dependencies]
# keep-sorted start
anyhow.workspace = true
pigeons = { workspace = true, optional = true }
rustsat.workspace = true
thiserror.workspace = true
# keep-sorted end

[build-dependencies]
# keep-sorted start
bindgen.workspace = true
cc.workspace = true
chrono.workspace = true
git2 = { workspace = true, optional = true }
glob.workspace = true
# keep-sorted end

[dev-dependencies]
# keep-sorted start
clap.workspace = true
rustsat-solvertests.workspace = true
signal-hook.workspace = true
# keep-sorted end

[package.metadata.docs.rs]
features = ["_docs"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
