[package]
name = "rustsat-capi"
version.workspace = true
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "C-API for the RustSAT library"
keywords = ["sat", "satisfiability", "encodings"]
rust-version.workspace = true

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsat = { workspace = true, features = ["internals", "fxhash"] }

[dev-dependencies]
inline-c = "0.1.8"

[lib]
crate-type = ["staticlib"]
