[package]
name = "rustsat-capi"
version.workspace = true
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "C-API for the RustSAT library"
keywords = ["sat", "satisfiability", "encodings"]
rust-version.workspace = true

# Since this is not intended to be used with Rust projects, we don't publish
# this crate
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsat = { workspace = true, features = ["internals", "fxhash"] }

[dev-dependencies]
cc.workspace = true
libtest-mimic.workspace = true
target-lexicon = "0.13.2"

[lib]
crate-type = ["staticlib"]

[[test]]
name = "c-tests"
path = "tests/c-tests.rs"
harness = false
