[package]
name = "rustsat-codegen"
description = "Automated code generation for the RustSAT project."
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# This is only intended to be used in this repo
publish = false

[dependencies]
# keep-sorted start block=yes
cbindgen = "0.29.2"
minijinja = { version = "2.15.1", default-features = false, features = [
  "multi_template",
  "serde",
  "loader",
] }
serde.workspace = true
similar = "2.7.0"
tempfile.workspace = true
# keep-sorted end

[features]
_test = []
