[package]
name = "rustsat-glucose"
version = "0.3.2"
edition = "2021"
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license = "MIT"
description = "Interface to the SAT solver Glucose for the RustSAT library."
keywords = ["sat-solver", "rustsat"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
quiet = []
default = ["quiet"]

[dependencies]
cpu-time = "1.0.0"
rustsat = { version = "0.5.1", path = "../rustsat", default-features = false }
thiserror = { version = "1.0.57" }
anyhow = { version = "1.0.80" }

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
git2 = "0.19.0"
glob = "0.3.1"
chrono = "0.4.31"
cmake = "0.1.50"

[dev-dependencies]
rustsat-solvertests = { path = "../solvertests" }
