[package]
name = "rustsat-glucose"
version = "0.3.3"
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "Interface to the SAT solver Glucose for the RustSAT library."
keywords = ["sat-solver", "rustsat"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
quiet = []
default = ["quiet"]

[dependencies]
anyhow.workspace = true
cpu-time.workspace = true
thiserror.workspace = true
rustsat.workspace = true

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true

[dev-dependencies]
rustsat-solvertests.workspace = true
