[package]
name = "rustsat-glucose"
version.workspace = true
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "Interface to the SAT solver Glucose for the RustSAT library."
keywords = ["sat-solver", "rustsat"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
include = [
  "build.rs",
  "CHANGELOG.md",
  "README.md",
  "/src/",
  "/cppsrc/",
  "!/cppsrc/parallel/",
]
rust-version.workspace = true # When changing, update crate documentation and build script

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
quiet = []
default = ["quiet"]

[dependencies]
anyhow.workspace = true
cpu-time.workspace = true
thiserror.workspace = true
rustsat.workspace = true

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true

[dev-dependencies]
rustsat-solvertests.workspace = true
