[package]
name = "rustsat-ipasir"
version = "0.1.1"
edition = "2021"
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license = "MIT"
description = "IPASIR bindings for RustSAT"
keywords = ["sat-solver", "rustsat"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu-time = "1.0.0"
rustsat = { version = "0.6.0", path = "../rustsat", default-features = false }
thiserror = { version = "1.0.57" }
anyhow = { version = "1.0.80" }
