[package]
name = "rustsat-kissat"
version = "0.3.1"
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "Interface to the SAT solver kissat for the RustSAT library."
keywords = ["sat-solver", "rustsat"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
safe = []
quiet = []
v4-0-1 = []
v4-0-0 = []
v3-1-1 = []
v3-1-0 = []
v3-0-0 = []
sc2022-light = []
sc2022-hyper = []
sc2022-bulky = []

[dependencies]
anyhow.workspace = true
cpu-time.workspace = true
thiserror.workspace = true
rustsat.workspace = true

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
chrono.workspace = true
git2.workspace = true
glob.workspace = true

[dev-dependencies]
clap.workspace = true
rustsat-solvertests.workspace = true
signal-hook.workspace = true
