[package]
name = "rustsat-kissat"
version.workspace = true
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "Interface to the SAT solver kissat for the RustSAT library."
keywords = ["sat-solver", "rustsat"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
include = [
  "build.rs",
  "CHANGELOG.md",
  "README.md",
  "/src/",
  "/examples/",
  "/csrc/src/",
  "/csrc/README.md",
  "/csrc/LICENSE",
  "/csrc/VERSION",
]
rust-version = "1.77.0" # When changing, update crate documentation and build script

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
safe = []
quiet = []
git = ["dep:git2"]
v4-0-2 = []
v4-0-1 = ["git"]
v4-0-0 = ["git"]
v3-1-1 = ["git"]
v3-1-0 = ["git"]
v3-0-0 = ["git"]
sc2022-light = ["git"]
sc2022-hyper = ["git"]
sc2022-bulky = ["git"]

[dependencies]
anyhow.workspace = true
cpu-time.workspace = true
thiserror.workspace = true
rustsat.workspace = true

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
chrono.workspace = true
git2 = { workspace = true, optional = true }
glob.workspace = true

[dev-dependencies]
clap.workspace = true
rustsat-solvertests.workspace = true
signal-hook.workspace = true
