[package]
name = "rustsat-minisat"
version = "0.4.6"
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "Interface to the SAT solver Minisat for the RustSAT library."
keywords = ["sat-solver", "rustsat"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
include = [
  "build.rs",
  "CHANGELOG.md",
  "README.md",
  "/src/",
  "/examples/",
  "/cppsrc/",
  "!/cppsrc/doc/",
]

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
quiet = []
default = ["quiet"]

[dependencies]
anyhow.workspace = true
cpu-time.workspace = true
thiserror.workspace = true
rustsat.workspace = true

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true

[dev-dependencies]
clap.workspace = true
signal-hook.workspace = true
rustsat-solvertests.workspace = true
