[package]
name = "rustsat-minisat"
version.workspace = true
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "Interface to the SAT solver Minisat for the RustSAT library."
keywords = ["sat-solver", "rustsat"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
include = [
  "build.rs",
  "CHANGELOG.md",
  "README.md",
  "/src/",
  "/examples/",
  "/cppsrc/",
  "!/cppsrc/doc/",
]
rust-version.workspace = true # When changing, update crate documentation, build script, and tools MSRV

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
quiet = []
default = ["quiet"]
_test = ["debug"]

[dependencies]
# keep-sorted start
anyhow.workspace = true
rustsat.workspace = true
thiserror.workspace = true
# keep-sorted end

[build-dependencies]
# keep-sorted start
bindgen.workspace = true
cmake.workspace = true
# keep-sorted end

[dev-dependencies]
# keep-sorted start
clap.workspace = true
rustsat-solvertests.workspace = true
signal-hook.workspace = true
# keep-sorted end
