[package]
name = "pigeons"
version = "0.2.1"
edition.workspace = true
license.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
description = "A library for writing VeriPB proofs"
keywords = ["sat", "satisfiability", "encodings", "proof-logging"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
include = ["CHANGELOG.md", "README.md", "/src/"]
rust-version = "1.75.0"

[dependencies]
# keep-sorted start
itertools.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, optional = true }
# keep-sorted end

[dev-dependencies]
tempfile.workspace = true

[features]
short-keywords = []
serde = ["dep:serde"]
all = ["short-keywords", "serde"]
